force-app/main/default/objects/conference360__Blackthorn_Events_Settings__c/conference360__Blackthorn_Events_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Blackthorn | Events Settings</label>
</CustomObject>