force-app/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Attnd_DisableContactUpdate__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attnd_DisableContactUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attnd: DisableContactUpdate</label>
    <type>Checkbox</type>
</CustomField>