force-app/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Delete_Recurring_Event__c.field-meta.xml
<CustomField>
    <fullName>conference360__Delete_Recurring_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When you delete a Recurring Event record, all related Events that have no attendees will be deleted as well.</inlineHelpText>
    <label>Delete Recurring Events</label>
    <type>Checkbox</type>
</CustomField>