force-app/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Disable_All_Triggers__c.field-meta.xml
<CustomField>
    <fullName>conference360__Disable_All_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to disable all Events package triggers.</inlineHelpText>
    <label>Disable All Triggers</label>
    <type>Checkbox</type>
</CustomField>