force-app/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Disable_Attendee_RollupToEvent__c.field-meta.xml
<CustomField>
    <fullName>conference360__Disable_Attendee_RollupToEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Attendee_RollupToEvent__c</label>
    <type>Checkbox</type>
</CustomField>