force-app/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Disable_Notify_Platform__c.field-meta.xml
<CustomField>
    <fullName>conference360__Disable_Notify_Platform__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Events Platform won&apos;t be notified whenever an Event or related record is changed</description>
    <inlineHelpText>If checked, the Events Platform won&apos;t be notified whenever an Event or related record is changed</inlineHelpText>
    <label>Disable Notify Platform</label>
    <type>Checkbox</type>
</CustomField>