force-app/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Event_Auth_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Auth_Timestamp__c</fullName>
    <inlineHelpText>The datetime the user did the Event Auth from the setup wizard -will only be set if the auth was successful. If the customer needs to do the Auth again with another user, delete the value in this field and they&apos;ll be able to do the Auth again.</inlineHelpText>
    <label>Event Auth Timestamp</label>
    <type>DateTime</type>
</CustomField>