force-app/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Event_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Field_Id__c</fullName>
    <inlineHelpText>DO NOT MODIFY THIS CUSTOM SETTING MANUALLY!</inlineHelpText>
    <label>Event Field Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>