force-app/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Event_Registration_Immediate_Process__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Registration_Immediate_Process__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Process ERS Aynschronously</label>
    <type>Checkbox</type>
</CustomField>