force-app/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Platform_Domain__c.field-meta.xml
<CustomField>
    <fullName>conference360__Platform_Domain__c</fullName>
    <description>Used in formula fields that link to the platform. The value should not have a slash at the end.</description>
    <inlineHelpText>Used in formula fields that link to the platform. The value should not have a slash at the end.</inlineHelpText>
    <label>Platform Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>