force-app/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Recurring_Event_Count__c.field-meta.xml
<CustomField>
    <fullName>conference360__Recurring_Event_Count__c</fullName>
    <defaultValue>12</defaultValue>
    <inlineHelpText>If the Recurring Event Count field is blank, this number defines the default number of events to be  created.</inlineHelpText>
    <label>Recurring Event Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>